# csv-agent

./: .env.example  .gitignore  CSV_Agent_Architecture.md  README.md  WHAT_AM_I.md  context.json  main.py  requirements.txt
agents/: executor.py  guardrail.py  nl_parser.py  sql_validator.py
backend/: .env.example  =1.1  api.py  pyproject.toml  railway.toml  requirements.txt  schemas.py
backend/app/: auth.py  config.py  context_store.py  csv_inference.py  data_watcher.py  db_client.py  logging_utils.py  main.py  mcp_client.py  pending_writes.py  sql_safety.py  supabase_upload.py
backend/app/agents/: base.py  context_builder.py  figure_builder.py  nl_parser.py  nl_responder.py  query_planner.py  sql_agent.py
backend/app/prompts/: context_builder.md  nl_parser.md  nl_responder.md  query_planner.md  sql_agent.md
backend/app/routers/: auth.py  csv.py  query.py  tables.py
backend/tests/: test_access_control.py  test_auth.py  test_query_planner.py  test_supabase_upload.py  test_supabase_write_flow.py
frontend/: .env.example  index.html  package-lock.json  package.json  railway.toml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  auth.tsx  index.css
frontend/src/api/: client.ts
nl_sql_tool/: .env.example  context.json  main.py  requirements.txt
nl_sql_tool/agents/: context_builder.py  executor.py  guardrail.py  nl_parser.py  nl_responder.py  sql_validator.py
nl_sql_tool/utils/: figure_builder.py  mcp_client.py  row_parser.py
utils/: context_io.py  csv_uploader.py  llm_client.py  mcp_client.py
(+22 files in other folders)
