[project]
name = "igna-query-agent-backend"
version = "0.1.0"
description = "FastAPI + DuckDB backend for the IGNA CSV query agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "openai>=1.40",
    "mcp>=1.27,<2",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
